# Sampler

./: .gitignore  README.md
Hardware/: .gitignore  MultiBoardSchematic1.MbaDoc  MultiBoardSchematic1.MbsDoc  Sampler.PrjMbd  Sampler.PrjMbdStructure
Hardware (kicad)/: .gitignore
Hardware (kicad)/MPCBoard/: MPCBoard-altium-import.kicad_sym  MPCBoard.kicad_pcb  MPCBoard.kicad_pro  MPCBoard.kicad_sch  sym-lib-table  ~MPCBoard.kicad_sch.lck
Hardware (kicad)/MPCButton/: MPCButton-altium-import.kicad_sym  MPCButton.kicad_pcb  MPCButton.kicad_pro  MPCButton.kicad_sch  MPCButton.stl  MPCButton.wrl  sym-lib-table
Hardware/MPCBoard/: MPCBoard.PcbDoc  MPCBoard.PrjPcb  MPCBoard.PrjPcbStructure  MPCBoard.SchDoc
Hardware/MPCButton/: MPCButton.PcbDoc  MPCButton.PrjPcb  MPCButton.PrjPcbStructure  MPCButton.SchDoc  MPCButton.txt
docs/: .gitignore  main.btex
docs/codes/: ads1015.txt  midi-wrapper.txt  pads-midi.txt  pads-task.txt  quantizer-interrupt.txt  quantizer-new.txt  sequencer-handlers.txt  sequencer-task.txt
docs/codes/graphics/: button.txt  driver.txt  element.txt  events.txt  manager.txt  screen-loading.txt  screen.txt
docs/codes/pads/: midi.txt  new.txt  processing.txt
esp32/: .gitignore  CMakeLists.txt  README.md  sdkconfig
esp32/components/graphics_lib/: CMakeLists.txt  README.md
esp32/components/graphics_lib/graphics/: graphics_types.h  lcd.cpp  lcd.h
esp32/components/graphics_lib/graphics/drivers/: driver.h
esp32/components/graphics_lib/graphics/drivers/lcd1602/: lcd1602.cpp  lcd1602.h
esp32/components/graphics_lib/graphics/drivers/logger/: logger.cpp  logger.h
esp32/components/graphics_lib/graphics/manager/: graphics_manager.cpp  graphics_manager.h
esp32/components/graphics_lib/graphics/screen/: screen.cpp  screen.h
esp32/components/graphics_lib/graphics/ui/: element.cpp  element.h  event.h
esp32/components/graphics_lib/graphics/ui/button/: button.cpp  button.h
esp32/components/graphics_lib/graphics/ui/checkbox/: checkbox.cpp  checkbox.h
esp32/components/graphics_lib/graphics/ui/intinput/: intinput.cpp  intinput.h
esp32/components/graphics_lib/graphics/ui/row/: row.cpp  row.h
esp32/components/graphics_lib/graphics/ui/text/: text.cpp  text.h
esp32/components/settings_lib/: CMakeLists.txt  README.md
esp32/components/settings_lib/settings/: manager.cpp  manager.h  utils.cpp
esp32/components/settings_lib/settings/component/: component.cpp  component.h
esp32/components/settings_lib/settings/group/: group.h
esp32/main/: CMakeLists.txt  idf_component.yml  main.cpp
esp32/main/ads1015/: ads1015.cpp  ads1015.hpp
esp32/main/graphics/: lcd.cpp  lcd.h  types.h
esp32/main/graphics/driver/: lcd1602.cpp  lcd1602.h
esp32/main/graphics/screen/: screen.cpp  screen.h
esp32/main/graphics/ui/: element.h  event.h
esp32/main/graphics/ui/button/: button.cpp  button.h
esp32/main/graphics/ui/checkbox/: checkbox.cpp  checkbox.h
esp32/main/graphics/ui/intinput/: intinput.cpp  intinput.h
esp32/main/graphics/ui/row/: row.cpp  row.h
esp32/main/graphics/ui/text/: text.cpp  text.h
esp32/main/pads/: pads.cpp  pads.h
esp32/main/quantizer/: quantizer.cpp  quantizer.h
esp32/main/screens/: screens.h
esp32/main/screens/home/: home.cpp  home.h
esp32/main/screens/pad_settings/: pad_settings.cpp  pad_settings.h
esp32/main/screens/sequencer/: sequencer.cpp  sequencer.h
esp32/main/screens/settings/: settings.cpp  settings.h
esp32/main/selector/: selector.cpp  selector.h
esp32/main/sequencer/: sequencer.cpp  sequencer.h
esp32/main/settings/: settings_manager.cpp  settings_manager.h
esp32/main/settings/config/: config_component.cpp  config_component.h
esp32/main/settings/pads/: pads_component.cpp  pads_component.h
esp32/main/usb/: usb.cpp  usb.h
esp32/main/utils/: utils.cpp  utils.h
esp32_rust/: .gitignore  CMakeLists.txt  diagram.json  partitions.csv  sdkconfig  sdkconfig.old  wokwi.toml
esp32_rust/main/: CMakeLists.txt  idf_component.yml  main.cpp
software/: components.json  package-lock.json  package.json  vite.config.ts
software/src-tauri/: Cargo.toml  tauri.conf.json
tests/: loops_calc.py  read_vendor.py  test_vendor.py
(+71 files in other folders)
